2004-08-24  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/17149
	* semantics.c (check_accessibility_of_qualified_id): Defer check
	if qualifying_type is a template parameter.

2004-08-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17163
	* pt.c (instantiate_decl): Do not try to apply
	DECL_DECLARED_INLINED_P to a VAR_DECL.

	* search.c (build_baselink): Fix typo in comment.

2004-08-22 Andrew Pinski  <apinski@apple.com>

	Revert:
	2004-08-22  Andrew Pinski  <apinski@apple.com>
	PR c++/14029
	* typeck.c (build_unary_op): Use &a.b if the folded lowered
	expression is not constant.

2004-08-23  Nathan Sidwell  <nathan@codesourcery.com>

	* name-lookup.c (pushdecl): Rename build_type_copy call.
	* tree.c (cp_build_qualified_type_real,
	build_exception_variant, handle_java_interface_attribute): Likewise.

2004-08-22  Andrew Pinski  <apinski@apple.com>

	PR c++/14029
	* typeck.c (build_unary_op): Use &a.b if the folded lowered
	expression is not constant.

2004-08-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17121
	* decl.c (expand_static_init): Use DECL_FUNCTION_SCOPE_P.

2004-08-21  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c++/17120
	* pt.c (tsubst_copy_and_build): Avoid clearing TREE_NO_WARNING for
	MODOP_EXPR.

2004-08-20  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* pt.c (register_specialization): Check DECL_TEMPLATE_SPECIALIZATION
	before calling comp_template_args.

2004-08-20  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (build_vtbl_initializer): Use build_int_cst for
	negative size types.
	* decl.c (complete_array_type): Likewise.
	* method.c (finish_thunk): Likewise.

2004-08-20  Andreas Tobler  <a.tobler@schweiz.ch>

	* tree.c: Remove unused mark_local_for_remap_r.

2004-08-19  Eric Christopher  <echristo@redhat.com>

	* cp-tree.h (cxx_unsave_expr_now): Delete prototype.
	* tree.c (cxx_unsave_expr_now): Delete.
	(cp_unsave_r): Ditto.

2004-08-19  Mark Mitchell  <mark@codesourcery.com>

	PR c++/15890